<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListMenuFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip11">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/margherita_pizza" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/margheritaPizza"
            android:textColor="@color/yaziRenk1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fiyatPizza1"
            android:textColor="@color/yaziRenk2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:src="@drawable/heart_asset_icon" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip11">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="16dp"
            android:src="@drawable/veggie_pizza2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/veggiePizza"
            android:textColor="@color/yaziRenk1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="45dp"
            android:text="@string/domatesli"
            android:textColor="@color/yaziRenk2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fiyatPizza2"
            android:textColor="@color/yaziRenk2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:src="@drawable/heart_asset_icon_fill" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/veggie_pizza"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/veggiePizza2"
            android:textColor="@color/yaziRenk1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="45dp"
            android:text="@string/biberli"
            android:textColor="@color/yaziRenk2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/fiyatPizza2"
            android:textColor="@color/yaziRenk2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:src="@drawable/heart_asset_icon" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/pepperoni_pizza" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/pepperoniPizza"
            android:textColor="@color/yaziRenk1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/fiyatPizza1"
            android:textColor="@color/yaziRenk2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:src="@drawable/heart_asset_icon" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hizliTeslimat"
        android:textAlignment="viewEnd"
        android:textColor="@color/yaziRenk1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fastFood"
        android:textColor="@color/yaziRenk1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFood" />

    <SearchView
        android:id="@+id/searchBar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:background="@drawable/search_view_bg"
        android:iconifiedByDefault="false"
        android:queryHint="@string/aramaMetni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDelivery" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/pizzaText"
        android:textColor="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/chip11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar1" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/toolBarColor"
        android:text="@string/burgerText"
        android:textColor="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/chip12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip10"
        app:layout_constraintTop_toBottomOf="@+id/searchBar1" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/toolBarColor"
        android:text="@string/snackText"
        android:textColor="@color/yaziRenk1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip11"
        app:layout_constraintTop_toBottomOf="@+id/searchBar1" />


</androidx.constraintlayout.widget.ConstraintLayout>
